@@ -167,24 +167,45 @@
 	}
 }
 
-".rk.make.watch.f" <- function (k) {
-	# we need to make sure, the functions we use are *not* looked up as symbols in .GlobalEnv.
-	# else, for instance, if the user names a symbol "missing", and we try to resolve it in the
-	# wrapper function below, evaluation would recurse to look up "missing" in the .GlobalEnv
-	# due to the call to "if (!missing(value))".
-	get <- base::get
-	missing <- base::missing
-	assign <- base::assign
-	.rk.do.call <- rkward::.rk.do.call
-	invisible <- base::invisible
-
-	function (value) {
-		if (!missing (value)) {
-			assign (k, value, envir=.rk.watched.symbols)
-			.rk.do.call ("ws", k);
-			invisible (value)
-		} else {
-			get (k, envir=.rk.watched.symbols)
+if (compareVersion (paste (R.version$major, R.version$minor, sep="."), "2.4.0") >= 0) {
+	".rk.make.watch.f" <- function (k) {
+		# we need to make sure, the functions we use are *not* looked up as symbols in .GlobalEnv.
+		# else, for instance, if the user names a symbol "missing", and we try to resolve it in the
+		# wrapper function below, evaluation would recurse to look up "missing" in the .GlobalEnv
+		# due to the call to "if (!missing(value))".
+		get <- base::get
+		missing <- base::missing
+		assign <- base::assign
+		.rk.do.call <- rkward::.rk.do.call
+		invisible <- base::invisible
+	
+		function (value) {
+			if (!missing (value)) {
+				assign (k, value, envir=.rk.watched.symbols)
+				.rk.do.call ("ws", k);
+				invisible (value)
+			} else {
+				get (k, envir=.rk.watched.symbols)
+			}
+		}
+	}
+} else {
+	# see above, but '::' operator was more picky in R < 2.4
+	".rk.make.watch.f" <- function (k) {
+		get <- base::get
+		missing <- base::missing
+		assign <- base::assign
+		.rk.do.call <- get (".rk.do.call", envir=as.environment ("package:rkward"))
+		invisible <- base::invisible
+	
+		function (value) {
+			if (!missing (value)) {
+				assign (k, value, envir=.rk.watched.symbols)
+				.rk.do.call ("ws", k);
+				invisible (value)
+			} else {
+				get (k, envir=.rk.watched.symbols)
+			}
 		}
 	}
 }
