@@ -1,3 +1,4 @@
+- Fixed: Crash on simple assignments in globalenv() with R < 2.4.0
 - Fixed: Meta information (labels) did not get shown correctly in the data editor
 - Add command line option "--debugger" for debugging purposes
 - Fixed: Pressing the add button in a varslot with no object selected could crash RKWard
